--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -28,11 +28,11 @@ TopMonks - Software development partner for your business
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <h2 class="jumbotron__title">From your idea to <br>an effective solution</h2>
+        <h2 class="jumbotron__title">Od Vašeho nápadu <br>k&nbsp;efektivnímu řešení</h2>
         <div class="box box--lead box--mobile-only">
-          <p>We are building companies, integrating infrastructure, developing apps and
-            testing software for banks, startup and blockchain projects.</p>
-          <a class="action-button jumbotron__cta" href="#how-we-work">MORE ABOUT US</a>
+          <p>Budujeme firmy, integrujeme infrastrukturu, vyvíjíme aplikace a testujeme
+            software pro banky, startupy a blockchainové projekty.</p>
+          <a class="action-button jumbotron__cta" href="#how-we-work">VÍCE O NÁS</a>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -194,10 +194,10 @@ TopMonks - Software development partner for your business
             </linearGradient>
           </defs>
         </svg>
-        <h3>We listen</h3>
-        <p>We see the time devoted to your project as an investment into your future.
-          We listen to your ideas and needs and think about the best solution to do the project right the first
-          time.</p>
+        <h3>Nasloucháme</h3>
+        <p>Čas věnovaný projektu na samém začátku bereme jako investici do
+          budoucna. Nasloucháme vašim nápadům a potřebám a přemýšlíme nad
+          nejvhodnějším řešením, abychom projekt zvládli napoprvé&nbsp;dobře.</p>
       </div>
       <div class="box box--develop mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <svg width="173" height="126" viewBox="0 0 173 126" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -327,10 +327,11 @@ TopMonks - Software development partner for your business
             </linearGradient>
           </defs>
         </svg>
-        <h3>We develop</h3>
-        <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
-          explanations.
-          We’ll provide you with a great team of senior developers who are ready to work immediately.</p>
+        <h3>Vyvíjíme</h3>
+        <p>Pracujeme s&nbsp;nejnovějšími technologiemi, abychom docílili co nejlepšího
+          výsledku. Nepotřebujeme žádné zdlouhavé zaučování a vysvětlování.
+          Dáme vám k&nbsp;ruce sehraný tým seniorních vývojářů, kteří se ihned
+          dají do&nbsp;práce.</p>
       </div>
       <div class="box box--verify mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <svg width="144" height="140" viewBox="0 0 144 140" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -380,13 +381,13 @@ TopMonks - Software development partner for your business
           </defs>
         </svg>
 
-        <h3>We verify</h3>
-        <p>We closely examine and test every idea and every feature in every step of the project.
-          We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
-          by.</p>
+        <h3>Ověřujeme</h3>
+        <p>Každou myšlenku i&nbsp;funkci, každý krok vývoje podrobně zkoumáme a
+          testujeme. Soustředíme se na potřeby koncového uživatele. Neriskujeme.
+          Nepustíme na trh nic, za čím si nestojíme.</p>
       </div>
       <div class="how-we-work_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a class="action-button jumbotron__cta" href="#contact">LET'S&nbsp;COOPERATE!</a>
+        <a class="action-button jumbotron__cta" href="#contact">POJĎME NA TO!</a>
       </div>
     </div>
   </div>
@@ -397,40 +398,41 @@ TopMonks - Software development partner for your business
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>You will love working with us</h2>
+        <h2>Náš proces je jednoduchý, ale efektivní</h2>
       </div>
       <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
       </div>
       <div
         class="steps__step step_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Customer care</h3>
-        <p>During our co-operation, we’ll keep you in the loop. We’ll assign you a person who will be always happy to
-          explain everything, so that we could find the best solution together.</p>
+        <h3>Péče o&nbsp;zákazníky</h3>
+        <p>Po celou dobu spolupráce se staráme o&nbsp;to, abyste byli v&nbsp;obraze.
+          Přidělíme vám člověka, který vám vždy vše ochotně vysvětlí, abyste
+          společně našli nejlepší řešení.</p>
       </div>
       <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
       </div>
       <div
         class="steps__step step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Planning and research</h3>
-        <p>We explore the market possibilities and verify our ideas and thoughts. The product and its development are
-          not based on feelings, but data and experience.</p>
+        <h3>Plánování a průzkum</h3>
+        <p>Zkoumáme možnosti trhu a ověřujeme nápady a myšlenky. Produkt a jeho vývoj nestavíme na pocitech, ale na
+          datech a zkušenostech.</p>
       </div>
       <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
       </div>
       <div
         class="steps__step step_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <h3>Design</h3>
-        <p>Design breathes life into the product. We’ll make sure that your application is intuitive and that the end
-          users will love it.</p>
+        <p>Design vdechne produktu život. Zajistíme, aby byla vaše aplikace
+          intuitivní a koncoví uživatelé si ji zamilovali.</p>
       </div>
       <div
         class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-8-desktop">
       </div>
       <div
         class="steps__step step_4 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Development</h3>
-        <p>Rapid development doesn’t necessarily save time and money; it’s quite the other way round. We don’t start
-          developing products without thinking; we look for the best solution.</p>
+        <h3>Vývoj</h3>
+        <p>Rychlý vývoj nemusí nutně znamenat ušetření času a financí. Právě naopak. Nezačínáme bezmyšlěnkovitě vyvíjet,
+          ale hledáme ta nejlepší řešení konkrétně pro váš produkt.</p>
       </div>
     </div>
   </div>
@@ -445,7 +447,7 @@ TopMonks - Software development partner for your business
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Our customers say…</h2>
+          <h2>Naši zákazníci říkají, že...</h2>
         </div>
         <div
           class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
@@ -455,9 +457,10 @@ TopMonks - Software development partner for your business
               d="M3.16 25C2.09333 23.3516 1.29333 21.7164 0.76 20.0942C0.253333 18.4458 0 16.8106 0 15.1884C0 12.3888 0.746667 9.70696 2.24 7.14286C3.73333 4.55259 5.93333 2.17164 8.84 0L12.76 2.27629C13.08 2.48561 13.3067 2.72109 13.44 2.98273C13.6 3.21821 13.68 3.46677 13.68 3.72842C13.68 4.01622 13.6133 4.29095 13.48 4.55259C13.3467 4.81424 13.1867 5.03663 13 5.21978C12.7067 5.53375 12.3733 5.92622 12 6.39717C11.6533 6.84197 11.32 7.37834 11 8.00628C10.68 8.60806 10.4 9.28833 10.16 10.0471C9.94667 10.7797 9.84 11.5777 9.84 12.4411C9.84 13.383 10 14.3904 10.32 15.4631C10.6667 16.5358 11.2267 17.6871 12 18.9168C12.2667 19.3354 12.4 19.7541 12.4 20.1727C12.4 20.6436 12.24 21.0623 11.92 21.4286C11.6 21.7949 11.16 22.0827 10.6 22.292L3.16 25ZM17.48 25C16.4133 23.3516 15.6133 21.7164 15.08 20.0942C14.5733 18.4458 14.32 16.8106 14.32 15.1884C14.32 12.3888 15.0667 9.70696 16.56 7.14286C18.0533 4.55259 20.2533 2.17164 23.16 0L27.08 2.27629C27.4 2.48561 27.6267 2.72109 27.76 2.98273C27.92 3.21821 28 3.46677 28 3.72842C28 4.01622 27.9333 4.29095 27.8 4.55259C27.6667 4.81424 27.5067 5.03663 27.32 5.21978C27.0267 5.53375 26.6933 5.92622 26.32 6.39717C25.9733 6.84197 25.64 7.37834 25.32 8.00628C25 8.60806 24.72 9.28833 24.48 10.0471C24.2667 10.7797 24.16 11.5777 24.16 12.4411C24.16 13.383 24.32 14.3904 24.64 15.4631C24.9867 16.5358 25.5467 17.6871 26.32 18.9168C26.5867 19.3354 26.72 19.7541 26.72 20.1727C26.72 20.6436 26.56 21.0623 26.24 21.4286C25.92 21.7949 25.48 22.0827 24.92 22.292L17.48 25Z"
               fill="#D3D3D3"/>
           </svg>
-          <blockquote>We found our cooperation with TopMonks partner very productive. Professional approach expressed in
-            initiative, creativity, deep knowledge of subject field and strong compliance with time requirements allowed
-            us to launch product on time and without complications.
+          <blockquote>Naše spolupráce s&nbsp;TopMonks byla velmi produktivní. Jsou to (opravdoví)
+            profesionálové. Díky jejich iniciativnímu přístupu, kreativitě, hluboké
+            znalosti věci a striktnímu dodržování termínů jsme mohli produkt spustit
+            včas a bez jakýchkoli komplikací.
           </blockquote>
           <hr class="line-between_grey">
           <figcaption><b>Nataliya Rozhok</b><br>XIXOIO</figcaption>
@@ -484,10 +487,8 @@ TopMonks - Software development partner for your business
               d="M3.16 25C2.09333 23.3516 1.29333 21.7164 0.76 20.0942C0.253333 18.4458 0 16.8106 0 15.1884C0 12.3888 0.746667 9.70696 2.24 7.14286C3.73333 4.55259 5.93333 2.17164 8.84 0L12.76 2.27629C13.08 2.48561 13.3067 2.72109 13.44 2.98273C13.6 3.21821 13.68 3.46677 13.68 3.72842C13.68 4.01622 13.6133 4.29095 13.48 4.55259C13.3467 4.81424 13.1867 5.03663 13 5.21978C12.7067 5.53375 12.3733 5.92622 12 6.39717C11.6533 6.84197 11.32 7.37834 11 8.00628C10.68 8.60806 10.4 9.28833 10.16 10.0471C9.94667 10.7797 9.84 11.5777 9.84 12.4411C9.84 13.383 10 14.3904 10.32 15.4631C10.6667 16.5358 11.2267 17.6871 12 18.9168C12.2667 19.3354 12.4 19.7541 12.4 20.1727C12.4 20.6436 12.24 21.0623 11.92 21.4286C11.6 21.7949 11.16 22.0827 10.6 22.292L3.16 25ZM17.48 25C16.4133 23.3516 15.6133 21.7164 15.08 20.0942C14.5733 18.4458 14.32 16.8106 14.32 15.1884C14.32 12.3888 15.0667 9.70696 16.56 7.14286C18.0533 4.55259 20.2533 2.17164 23.16 0L27.08 2.27629C27.4 2.48561 27.6267 2.72109 27.76 2.98273C27.92 3.21821 28 3.46677 28 3.72842C28 4.01622 27.9333 4.29095 27.8 4.55259C27.6667 4.81424 27.5067 5.03663 27.32 5.21978C27.0267 5.53375 26.6933 5.92622 26.32 6.39717C25.9733 6.84197 25.64 7.37834 25.32 8.00628C25 8.60806 24.72 9.28833 24.48 10.0471C24.2667 10.7797 24.16 11.5777 24.16 12.4411C24.16 13.383 24.32 14.3904 24.64 15.4631C24.9867 16.5358 25.5467 17.6871 26.32 18.9168C26.5867 19.3354 26.72 19.7541 26.72 20.1727C26.72 20.6436 26.56 21.0623 26.24 21.4286C25.92 21.7949 25.48 22.0827 24.92 22.292L17.48 25Z"
               fill="#D3D3D3"/>
           </svg>
-          <blockquote>Lumir has proven to be an incredibly valuable team player that matched very
-            well with our senior product/dev team and proved exceptionally fast and
-            innovative thinker in designing and auditing our smart contracts
-            architecture.
+          <blockquote>Lumír je neuvěřitelně cenný týmový hráč, který velmi dobře zapadá do našeho senior/dev týmu, kde
+            naplno využívá rychlé a inovativní myšlenky při navrhování a auditu architektury.
           </blockquote>
           <hr class="line-between_grey">
           <figcaption><b>Nataliya Rozhok</b><br>DEBNK</figcaption>
@@ -500,9 +501,8 @@ TopMonks - Software development partner for your business
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="contact_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Let’s&nbsp;cooperate!</h2>
-        <p>Do you have any questions? Are you interested in working with us?
-          Contact&nbsp;us.</p>
+        <h2>Ozvěte se nám!</h2>
+        <p>Máte dotaz nebo zájem o&nbsp;spolupráci? Ozvěte se nám.</p>
       </div>
       <div
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
