Prodeti.TM - upraveny odkazy ve footeru

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -546,10 +546,7 @@
                 <a href="#uvod">Úvod</a>
               </li>
               <li>
-                <a href="#co-ucime">Co učíme</a>
-              </li>
-              <li>
-                <a href="#ukazky">Ukázky</a>
+                <a href="#courses">Co učíme</a>
               </li>
               <li>
                 <a href="#galerie">Fotogalerie</a>
