--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -1,20 +1,473 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>TopMonks</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Due Diligence process quantified</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,900" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Nunito+Sans:400,300,300italic,400italic,700,700italic'
+    rel='stylesheet' type='text/css'>
+
+  <!-- Theme CSS - Includes Bootstrap -->
+  <link href="stylesheets/creative.css" rel="stylesheet">
+
 </head>
 
-<body>
-  <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>TopMonks</h1>
-    <h2>Created with simple generator - XD</h2>
-  </div>
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./img/logo-xduediligence.svg"></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto my-2 my-lg-0">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#services">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <header class="masthead">
+    <div class="container h-100">
+      <div class="row h-100">
+        <div class="col-lg-5 my-auto">
+          <div class="header-content mx-auto">
+            <h1 class="mb-5">Due Diligence process quantified</h1>
+            <a href="#download" class="btn btn-primary btn-xl js-scroll-trigger">Learn more</a> <a href="#download"
+              class="btn btn-primary secondary btn-xl js-scroll-trigger">Watch video</a>
+          </div>
+        </div>
+        <div class="col-lg-7 my-auto">
+          <div class="device-container">
+            <div class="">
+              <div class="device">
+                <div class="screen">
+                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                  <img src="img/screen.png" class="img-fluid" alt="">
+                </div>
+                <div class="button">
+                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Services Section -->
+  <!-- <section class="page-section" id="services">
+    <div class="container">
+      <h2 class="text-center mt-0">At Your Service</h2>
+      <hr class="divider my-4">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Sturdy Themes</h3>
+            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Up to Date</h3>
+            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Ready to Publish</h3>
+            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Made with Love</h3>
+            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  -->
+
+  <!-- Portfolio Section -->
+  <!-- <section id="portfolio">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  -->
+
+  <section>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <h2 class="mt-0">Your organisation <br>doesn't look like this</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid" src="img/lorem-ipsum-2.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5 bgtext">
+            <h3 class="display-6">Lorem ipsum one</h3>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="p-5">
+            <img class="img-fluid" src="img/lorem-ipsum-1.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5 bgtext bgtext-right">
+            <h3 class="display-6">Lorem ipsum two</h3>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- About Section -->
+
+  <!-- Features section -->
+  <section class="page-section" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 pt-4">
+          <div id="carouselExampleIndicators1" class="carousel slide features" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="/img/funkce1.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/img/funkce2.png" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/img/funkce3.png" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 pt-4">
+          <div class="header-right-contents">
+            <h3 class="display-6">Features availalbe with Easy perfect free app</h3>
+            <ul class="list-unstyled mt-5 feature-listing">
+              <li>
+                <h4>Beautiful, modern design</h4>
+                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+              </li>
+              <li>
+                <h4>Easy to customize</h4>
+                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+              </li>
+              <li>
+                <h4>Developer Friendly</h4>
+                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+              </li>
+              <li>
+                <h4>Fully Responsive</h4>
+                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+              </li>
+              </li>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //Features section -->
+
+  <section id="form" class="page-section">
+    <div class=container>
+      <div class=row>
+        <div class="col-lg-12 text-center">
+          <h2 class="">Contact</h2>
+          <hr class=line>
+        </div>
+      </div>
+    </div>
+    <div class=container>
+      <div class=row>
+        <div class="col-lg-12 text-center">
+          <form role=form id=contact-form class=contact-form>
+            <div class=row>
+              <div class=col-md-6>
+                <div class=form-group><input class=form-control name=name autocomplete=off id=Name placeholder=Name>
+                </div>
+              </div>
+              <div class=col-md-6>
+                <div class=form-group><input type=email class=form-control name=email autocomplete=off id=email
+                    placeholder=E-mail></div>
+              </div>
+            </div>
+            <div class=row>
+              <div class=col-md-12>
+                <div class=form-group><textarea class="form-control textarea" rows=3 name=message id=Message
+                    placeholder=Message></textarea></div>
+              </div>
+            </div>
+            <div class=row>
+              <div class=col-md-12>
+                <button type=submit class="btn btn-primary btn-xl">Send a message</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Call to Action Section -->
+  <!--<section class="page-section bg-dark text-white">
+    <div class="container text-center">
+      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+    </div>
+  </section>
+  -->
+
+  <section class="team">
+    <div class="container content">
+      <div class=container>
+        <div class=row>
+          <div class="col-lg-12text-center">
+            <h2 class="">Our Great Team</h2>
+            <hr class=line>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 bgtext">
+          <div class="team-members">
+            <div class="team-avatar">
+              <img class="img-responsive" src="/img/jirka-penzes.png" alt="">
+            </div>
+            <div class="team-desc">
+              <h4>Jirka Penzes</h4>
+              <span>Marketing</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-members">
+            <div class="team-avatar">
+              <img class="img-responsive" src="/img/linh-nguyen.png" alt="">
+            </div>
+            <div class="team-desc">
+              <h4>Linh Nguyen</h4>
+              <span>Founder</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 bgtext bgtext-right">
+          <div class="team-members">
+            <div class="team-avatar">
+              <img class="img-responsive" src="/img/jirka-penzes.png" alt="">
+            </div>
+            <div class="team-desc">
+              <h4>Pavel Trnka</h4>
+              <span>Design</span>
+            </div>
+          </div>
+        </div>
+      </div><!-- //end row -->
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+          <ul class="list-inline mb-2">
+            <li class="list-inline-item">
+              <a href="#">About</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Contact</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Terms of Use</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Privacy Policy</a>
+            </li>
+          </ul>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+        </div>
+        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-facebook-square fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/creative.min.js"></script>
+
 </body>
 
 </html>
