--- a/www.topmonks.com/src/html/v2/index.html
+++ b/www.topmonks.com/src/html/v2/index.html
@@ -21,6 +21,8 @@ TopMonks - Software development partner for your business
 <meta property="og:type" content="company">
 <meta property="og:url" content="https://www.topmonks.com/">
 <meta property="og:site_name" content="TopMonks.com">
+<link rel="stylesheet" href="/stylesheets/v2.css">
+
 {% endblock %}
 
 {% block content %}
