TM jobs.com + cz - added Gallery

--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -558,6 +558,39 @@
     </div>
   </div>
 </section>
+<section id="gallery">
+  <div class="mdc-layout-grid__inner">
+    <div class="gallery mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973908/topmonks.com/jobs/galerry/img_meet1.png"
+           width="240" height="300">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973909/topmonks.com/jobs/galerry/img_meet2.png"
+           width="630" height="300">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973909/topmonks.com/jobs/galerry/img_meet3.png"
+           width="310" height="300">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973909/topmonks.com/jobs/galerry/img_meet4.png"
+           width="240" height="300">
+    </div>
+    <div class="gallery mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973909/topmonks.com/jobs/galerry/img_meet5.png"
+           width="230" height="300">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973909/topmonks.com/jobs/galerry/img_meet6.png"
+           width="300" height="300">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973908/topmonks.com/jobs/galerry/img_meet7.png"
+           width="550" height="300">
+      <img alt="Gallery Photo"
+           src="https://res.cloudinary.com/topmonks/image/upload/v1551973909/topmonks.com/jobs/galerry/img_meet8.png"
+           width="300" height="300">
+    </div>
+    </div>
+</section>
+
 <section class="tm-jobs-info mdc-layout-grid">
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="page_sub-title page_sub-title_left mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
