TM HP/V2 - loga

--- a/www.topmonks.com/src/html/v2/index.html
+++ b/www.topmonks.com/src/html/v2/index.html
@@ -47,17 +47,16 @@ TopMonks - Software development partner for your business
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="https://www.erstegroupit.com/en/home"><img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1550574016/loga/logo_erste.png"
-          alt="[logo] Erste Group" style="width: 117px"></a>
+          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/erste_logo.png"
+          alt="[logo] Erste Group"></a>
         <a href="https://www.pricefx.eu/site/"><img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1550574146/loga/logo_pricefx.png"
-          alt="[logo] Pricef(x)" style="width: 123px"></a>
+          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/pfx_logo.png"
+          alt="[logo] Pricef(x)"></a>
         <a href="https://zonky.cz/"><img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1550574086/loga/logo_zonky.png" alt="[logo] Zonky"
-          style="width: 156px"></a>
+          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/zonky_logo.png" alt="[logo] Zonky"></a>
         <a href="https://www.adler.info/CZ/cs/Home/"> <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1550574182/loga/logo_adler.png" alt="[logo] Adler"
-          style="width: 69px"></a>
+          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/adler_logo.png" alt="[logo] Adler"
+        ></a>
       </div>
     </div>
   </div>
