--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -181,6 +181,8 @@
         </svg>
         <p>Backend is handling the token pool and sale contract. All is protected by a
           multisig solution with optional hardware ledger protection.</p>
+        <a class="btn btn_purple">SALE CONTRACT</a><br>
+        <a class="btn btn_transparent">TOKEN POOL</a>
         <p>Token pool is a decentralized solution for temporary holding of tokens for
           users without prior knowledge of crypto.</p>
       </div>
