Update design (css, img)

--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -23,7 +23,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./img/logo-xduediligence.svg"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#claime">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#form">Contact</a>
           </li>
         </ul>
       </div>
@@ -53,8 +53,8 @@
         <div class="col-lg-5 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5">Due Diligence process quantified</h1>
-            <a href="#download" class="btn btn-primary btn-xl js-scroll-trigger">Learn more</a> <a href="#download"
-              class="btn btn-primary secondary btn-xl js-scroll-trigger">Watch video</a>
+            <a href="#claime" class="btn btn-primary btn-xl js-scroll-trigger">Learn more</a> 
+            <!--<a href="#about" class="btn btn-primary secondary btn-xl js-scroll-trigger">Watch video</a>-->
           </div>
         </div>
         <div class="col-lg-7 my-auto">
@@ -76,184 +76,122 @@
     </div>
   </header>
 
-  <!-- Services Section -->
-  <!-- <section class="page-section" id="services">
-    <div class="container">
-      <h2 class="text-center mt-0">At Your Service</h2>
-      <hr class="divider my-4">
-      <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Sturdy Themes</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Up to Date</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
-
-  <!-- Portfolio Section -->
-  <!-- <section id="portfolio">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-            <div class="portfolio-box-caption p-3">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
-
-  <section>
+  <section id="claime">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Your organisation <br>doesn't look like this</h2>
+          <h2 class="mt-0">Agile organisation<br> doesn't look like this</h2>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+   <!-- Projects Section -->
+  <section id="projects" class="projects-section">
+    <div class="container">
+
+      <!-- Project One Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-8">
+          <img class="img-fluid" src="img/lorem-ipsum-2.png" alt="">
+        </div>
+        <div class="col-lg-4">
+          <div class="text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text  bgtext-right w-100 my-auto text-center text-lg-left">
+                <h4 class="">Formal</h4>
+                <p class="mb-0">Created artificially</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      </section>
+
+    <section id="claime">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <h2 class="mt-0">Agile organisation<br> look like this</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+ <!-- Projects Section -->
+  <section id="projects" class="projects-section">
+    <div class="container">
+
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-8">
+          <img class="img-fluid" src="img/lorem-ipsum-1.png" alt="">
+        </div>
+        <div class="col-lg-4 order-lg-first">
+          <div class="text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text  w-100 my-auto text-center text-lg-right">
+                <h4 class="">Informal structure</h4>
+                <p class="mb-0">Reality</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="projects-section">
+   <div class="container text-center">
+    <h3>&#128405; Disruptive trends challenging the old paradigm</h3>
+    <h3>&#128405; The trends are dramatically changing how organizations and employees work</h3>
+    </div>
+
+  </section>
+
+
+
+  <!--<section id="about" class="">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
-          <div class="p-5">
+          <div>
             <img class="img-fluid" src="img/lorem-ipsum-2.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5 bgtext">
-            <h3 class="display-6">Lorem ipsum one</h3>
-
+            <h3 class="display-6">Formal</h3>
+            <p>Created artificially</p>
           </div>
         </div>
       </div>
     </div>
-  </section>
 
-  <section>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6">
-          <div class="p-5">
+          <div>
             <img class="img-fluid" src="img/lorem-ipsum-1.png" alt="">
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="p-5 bgtext bgtext-right">
-            <h3 class="display-6">Lorem ipsum two</h3>
-
+          <div class="p-5 bgtext text-right bgtext-right">
+            <h3 class="display-6">Informal structure</h3>
+            <p>Reality</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
-
-  <!-- About Section -->
+  -->
 
   <!-- Features section -->
-  <section class="page-section" id="about">
+  <section class="page-section" id="app">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 pt-4">
@@ -274,43 +212,54 @@
                 <img class="d-block w-100" src="/img/funkce3.png" alt="Third slide">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
-            </a>
+            </a>-->
           </div>
         </div>
         <div class="col-sm-12 col-md-6 pt-4">
           <div class="header-right-contents">
-            <h3 class="display-6">Features availalbe with Easy perfect free app</h3>
+            <h3 class="display-6 mt-2">We analyze teams, identify real leaders and help everyone in your organisation reach their full potential </h3>
             <ul class="list-unstyled mt-5 feature-listing">
               <li>
-                <h4>Beautiful, modern design</h4>
-                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+                <h5>Management of risks associated with the loss or burnout of leaders</h5>
               </li>
               <li>
-                <h4>Easy to customize</h4>
-                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+                <h5>Management and adaptation of newcomers</h5>  
               </li>
               <li>
-                <h4>Developer Friendly</h4>
-                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+                <h5>Optimization of HR processes and budget</h5> 
               </li>
               <li>
-                <h4>Fully Responsive</h4>
-                <p>Duis bibendum diam non erat facilaisis tincidunt</p>
+                <h5>Solving the issue of overloading leaders and better distribution of work</h5>     
               </li>
+              <li>
+                <h5>Optimization of downsizing </h5>     
               </li>
+              </ul>
+              <div class="mt-5">
+                <a href="#form" class="btn btn-primary btn-xl js-scroll-trigger">Learn more</a>
+              </div>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- //Features section -->
+
+    <section class="page-section">
+   <div class="container text-center">
+    <h3>&#128405; Get to know your team</h3>
+    <h3>&#128405; Insight that drives change</h3>
+    <h3>&#128405; Help everyone in your organisation reach their full potential.</h3>
+    </div>
+
+  </section>
 
   <section id="form" class="page-section">
     <div class=container>
@@ -352,7 +301,6 @@
     </div>
   </section>
 
-
   <!-- Call to Action Section -->
   <!--<section class="page-section bg-dark text-white">
     <div class="container text-center">
@@ -362,11 +310,11 @@
   </section>
   -->
 
-  <section class="team">
-    <div class="container content">
+  <section id="team" class="team">
+    <div class="container">
       <div class=container>
         <div class=row>
-          <div class="col-lg-12text-center">
+          <div class="col-lg-12 text-center">
             <h2 class="">Our Great Team</h2>
             <hr class=line>
           </div>
@@ -417,38 +365,29 @@
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
-              <a href="#">About</a>
+              <a class="js-scroll-trigger" href="#claime">About</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Contact</a>
+              <a class="js-scroll-trigger" href="#team">Team</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a class="js-scroll-trigger" href="#form">Contact</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">xDueDiligence 2019.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook-square fa-2x fa-fw"></i>
+              <a href="#page-top">
+                <img src="img/facebook.svg">
               </a>
             </li>
             <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              <a href="#page-top">
+                <img src="img/twitter.svg">
               </a>
             </li>
           </ul>
