[www.topmonks.com] Updated text in header

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -26,12 +26,12 @@ TopMonks - Software development partner for your business
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2 class="jumbotron__title">We are developers</h2>
+        <h2 class="jumbotron__title">From your idea to <br>an effective solution</h2>
         <div class="box box--lead box--mobile-only">
-          <blockquote class="jumbotron__lead">
-            <p>And they were perfectionists. Ask them to build you a device and you wouldn’t get what you asked for. You’d get what you wanted.</p>
-             <cite>- Terry Pratchett</cite>
-          </blockquote>
+          <div class="jumbotron__lead">
+            <p>We are building companies, integrating infrastructure, developing apps and
+              testing software for banks, startup and blockchain projects.</p>
+          </div>
           <a class="action-button jumbotron__cta" href="#how-we-work">How we work</a>
         </div>
       </div>
